[gd_scene load_steps=6 format=3 uid="uid://bovwmotkm5fef"]

[ext_resource type="Theme" uid="uid://bxvebmn23os06" path="res://themes/main_theme.tres" id="1_4228v"]
[ext_resource type="Script" path="res://scripts/companion/companion.gd" id="2_k0t5i"]
[ext_resource type="Script" path="res://scripts/home_button.gd" id="3_sp4f2"]
[ext_resource type="Texture2D" uid="uid://p73un2ksmoxy" path="res://images/icons/nil_status.png" id="4_yoxsp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ehkhm"]
content_margin_bottom = 20.0

[node name="companion" type="PanelContainer"]
self_modulate = Color(0.14902, 0.152941, 0.188235, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4228v")
script = ExtResource("2_k0t5i")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="pcon" type="PanelContainer" parent="vbox"]
self_modulate = Color(0.105882, 0.105882, 0.133333, 1)
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="vbox/pcon"]
layout_mode = 2

[node name="hbox2" type="HFlowContainer" parent="vbox/pcon/vbox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="home_button" type="Button" parent="vbox/pcon/vbox/hbox2"]
layout_mode = 2
size_flags_vertical = 4
text = "Home"
script = ExtResource("3_sp4f2")

[node name="Label2" type="Label" parent="vbox/pcon/vbox/hbox2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "    Companion"

[node name="VSeparator" type="VSeparator" parent="vbox/pcon/vbox/hbox2"]
layout_mode = 2

[node name="delete_ai_button" type="Button" parent="vbox/pcon/vbox/hbox2"]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Delete the current character information and
create a new character from the start screen."
text = "Delete Character"

[node name="config" type="Button" parent="vbox/pcon/vbox/hbox2"]
visible = false
layout_mode = 2
text = "Config"

[node name="Label" type="Label" parent="vbox/pcon/vbox/hbox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Companion is very experimental. Things could change/ break with updates. Please be aware of this while using this feature. This will also use a lot more tokens than any other mode."
vertical_alignment = 1
autowrap_mode = 3

[node name="chat_scroll" type="ScrollContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ehkhm")
horizontal_scroll_mode = 0

[node name="chat_log_box" type="VBoxContainer" parent="vbox/chat_scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="hbox" type="HBoxContainer" parent="vbox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="loading" type="TextureRect" parent="vbox/hbox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_yoxsp")
expand_mode = 2

[node name="user_input" type="TextEdit" parent="vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your message"
drag_and_drop_selection_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
